--- a/README.adoc
+++ b/README.adoc
@@ -82,7 +82,7 @@ Learn how to {uri-contribute}[contribute].
 
 == License
 
-Copyright &copy; 2019 Oracle and/or its associates. All rights reserved.
+Copyright (c) 2019 Oracle and/or its associates. All rights reserved.
 
 Licensed under the {uri-license}[Universal Permissive License 1.0] as shown at 
 {uri-canonical-license}[https://oss.oracle.com/licenses/upl].
