--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -55,11 +55,11 @@
 . link:#creating-the-oke-cluster[Creating the OKE Cluster]
 . link:#adding-the-bastion-host[Adding the bastion host]
 . link:#using-the-bastion-host[Using the bastion host]
-. link:#adding-the-admin-host[Adding the admin host]
-.. link:#upgrading-the-admin-host[Upgrading the admin host]
-. link:#using-the-admin-host[Using the admin host]
-.. link:#enabling-instance_principal-on-the-admin-host[Enabling instance_principal on the admin host]
-.. link:#disabling-instance_principal-on-the-admin-host[Disabling instance_principal on the admin host]
+. link:#adding-the-operator-host[Adding the operator host]
+.. link:#upgrading-the-operator-host[Upgrading the operator host]
+. link:#using-the-operator-host[Using the operator host]
+.. link:#enabling-instance_principal-on-the-operator-host[Enabling instance_principal on the operator host]
+.. link:#disabling-instance_principal-on-the-operator-host[Disabling instance_principal on the operator host]
 .. link:#recommendations-for-using-instance_principal[Recommendations for using instance_principal]
 . link:#interacting-with-the-oke-cluster[Interacting with the OKE Cluster locally]
 . link:#creating-a-secret-for-ocir[Creating a Secret for OCIR]
@@ -129,53 +129,53 @@ terraform output
 
 You can then copy the ssh_to_bastion command, paste and run it in a terminal.
 
-=== Adding the admin host
+=== Adding the operator host
 
-The admin host is used to minimize local dependencies such as oci-cli, kubectl and so on. 
+The operator host is used to minimize local dependencies such as oci-cli, kubectl and so on. 
 
-If you want to use the admin host, set the parameter *admin_enabled* to *true* in terraform.tfvars. Refer to {uri-terraform-options}#admin-host[Admin Host] for other available bastion related parameters.
+If you want to use the operator host, set the parameter *operator_enabled* to *true* in terraform.tfvars. Refer to {uri-terraform-options}#operator-host[Admin Host] for other available bastion related parameters.
 
-==== Upgrading the admin host
+==== Upgrading the operator host
 
-There is 1 additional parameter for the admin:
+There is 1 additional parameter for the operator:
 
-* admin_package_upgrade
+* operator_package_upgrade
 
-_admin_package_upgrade_ will upgrade the admin compute packages on first boot. 
+_operator_package_upgrade_ will upgrade the operator compute packages on first boot. 
 
 ****
 N.B. It is good and recommended practice to upgrade your package host to the latest packages to minimize the possibility of vulnerabilities. However, it will also take slightly longer before the package host is available.
 ****
 
-=== Using the admin host
+=== Using the operator host
 
 ****
-*Assumption: you have set the admin_enabled parameter to true in terraform.tfvars*
+*Assumption: you have set the operator_enabled parameter to true in terraform.tfvars*
 ****
 
-Once the terraform apply is successful you will get the admin_private_ip as output and also a ssh command. You can also run the below command to get the output:
+Once the terraform apply is successful you will get the operator_private_ip as output and also a ssh command. You can also run the below command to get the output:
 
 ----
 terraform output
 ----
 
-You can then copy the ssh_to_admin command, paste and run it in a terminal.
+You can then copy the ssh_to_operator command, paste and run it in a terminal.
 
-==== Enabling instance_principal on the admin host
+==== Enabling instance_principal on the operator host
 {uri-oci-instance-principal}[instance_principal] is an IAM service feature that enables instances to be authorized actors (or principals) to perform actions on service resources. Each compute instance has its own identity, and it authenticates using the certificates that are added to it. These certificates are automatically created, assigned to instances and rotated, preventing the need for you to distribute credentials to your hosts and rotate them.
 
 Any user who has access to the instance (who can SSH to the instance), automatically inherits the privileges granted to the instance. Before you enable this feature, ensure that you know who can access it, and that they should be authorized with the permissions you are granting to the instance.
 
 By default, this feature is *_disabled_*. However, it is *_required_* at the time of cluster creation *_if_* you wish to enable link:#kms-integration[KMS Integration], calico, metricserver, helm or creating the OCIR secret.
 
-When you enable this feature, by default, the admin host will have privileges to all resources in the compartment. If you are enabling it for link:#kms-integration[KMS Integration], the admin host will also have rights to create policies in the root tenancy. 
+When you enable this feature, by default, the operator host will have privileges to all resources in the compartment. If you are enabling it for link:#kms-integration[KMS Integration], the operator host will also have rights to create policies in the root tenancy. 
 
-You can also turn on and off the feature at any time without impact on the admin or the cluster.
+You can also turn on and off the feature at any time without impact on the operator or the cluster.
 
-To enable, set admin_instance_principal to true:
+To enable, set operator_instance_principal to true:
 
 ----
-admin_instance_principal = "true"
+operator_instance_principal = "true"
 ----
 
 and verify:
@@ -184,13 +184,13 @@ and verify:
 oci network vcn list --compartment-id <compartment-id>
 ----
 
-==== Disabling instance_principal on the admin host
+==== Disabling instance_principal on the operator host
 
-. Set admin_instance_principal to false in terraform.tfvars
+. Set operator_instance_principal to false in terraform.tfvars
 
 +
 ----
-admin_instance_principal = false
+operator_instance_principal = false
 ----
 
 . Run terraform apply again:
@@ -208,13 +208,13 @@ terraform apply
 
 === Interacting with the OKE Cluster
 
-kubectl installed on the admin host by default and the kubeconfig file is set in the default location (~/.kube/config) so you don't need to set the KUBECONFIG environment variable every time you log in to the admin host. 
+kubectl installed on the operator host by default and the kubeconfig file is set in the default location (~/.kube/config) so you don't need to set the KUBECONFIG environment variable every time you log in to the operator host. 
 
 ****
-N.B. In order for kubeconfig to be created on the admin host, you need to link:#enabling-instance_principal-on-the-admin-host[enable instance_principal on the admin host].
+N.B. In order for kubeconfig to be created on the operator host, you need to link:#enabling-instance_principal-on-the-operator-host[enable instance_principal on the operator host].
 ****
 
-An alias "*k*" will be created for kubectl on the admin host. 
+An alias "*k*" will be created for kubectl on the operator host. 
 
 If you would like to use kubectl locally, {uri-install-kubectl}[install kubectl]. Then, set the KUBECONFIG to the config file path. The kubeconfig file will be saved generated locally under the folder *generated*:
 
@@ -241,17 +241,17 @@ Finally, assign the Secret OCID to *secret_id* in terraform.tfvars. Refer to {ur
 
 === Installing helm
 
-{uri-helm}[Helm] is a package manager for kubernetes. If you want to install helm on the admin host, set the parameter *install_helm = true* in terraform.tfvars. By default, it is set to false. 
+{uri-helm}[Helm] is a package manager for kubernetes. If you want to install helm on the operator host, set the parameter *helm_enabled = true* in terraform.tfvars. By default, it is set to false. 
 
-An alias "*h*" will be created for helm on the admin host. For other available parameters, refer to {uri-terraform-options}#helm[Helm parameters].
+An alias "*h*" will be created for helm on the operator host. For other available parameters, refer to {uri-terraform-options}#helm[Helm parameters].
 
 === Installing Calico 
 
-Calico enables network policy in Kubernetes clusters. To install calico set the parameter *install_calico = true* in terraform.tfvars. By default its set to false. Refer to {uri-terraform-options}#calico[Calico parameters] for other available parameters.
+Calico enables network policy in Kubernetes clusters. To install calico set the parameter *calico_enabled = true* in terraform.tfvars. By default its set to false. Refer to {uri-terraform-options}#calico[Calico parameters] for other available parameters.
 
 === Installing Kubernetes Metrics Server
 
-{uri-metricserver}[Kubernetes Metrics Server] can be installed by setting the parameter *install_metricserver = true* in terraform.tfvars. By default, the latest version is installed in kube-system namespace. This is required if you need to use Horizontal Pod Autoscaling.
+{uri-metricserver}[Kubernetes Metrics Server] can be installed by setting the parameter *metricserver_enabled = true* in terraform.tfvars. By default, the latest version is installed in kube-system namespace. This is required if you need to use Horizontal Pod Autoscaling.
 
 === Scaling the node pools
 
