--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,15 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+== 2.2.2 (June 10, 2020)
+* Upgraded base module to 1.2.3 (#169)
+
+== 2.2.1 (June 6, 2020)
+* Upgraded base module to 1.2.2 (#165)
+* Renamed all admin to operators
+* Standardized features with _enabled
+* Improved tagging
+
 == 2.2.0 (May 4, 2020)
 * Use OCI Secret in Vault to retrieve Auth Token for creating Kubernetes secret for OCIR. This allows reuse of existing Auth Tokens (#153)
 * Added Montreal as supported region (#160)
