--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -87,7 +87,7 @@ If you wish to use {uri-oci-kms}[OCI KMS] to encrypt Kubernetes secrets, the fol
 ** {uri-oci-manage-dynamic-groups}[manage dynamic groups]
 ** {uri-oci-manage-policies}[manage policies in root tenancy]
 * link:#adding-the-bastion-host[bastion must be enabled]
-* link:#enabling-instance_principal-on-the-bastion-host[bastion instance_principal must be enabled]
+* link:#enabling-instance_principal-on-the-operator-host[operator instance_principal must be enabled]
 * use_encryption must be set to _true_
 * existing_key_id must be provided
 
